
  * The left and right arrows now work in the multi-column auto completion
    menu.
  * When the completer runs in a background thread, completions will be
    displayed as soon as they are generated. This means that we don't have to
    wait for all the completions to be generated, before displaying the first
    one. The completion menus are updated as soon as new completions arrive.

- Changes regarding the `History` classes:

  * The `History` base class has a different interface. This was needed for
    asynchronous loading of the history. `ThreadedHistory` was added for this.

- Changes related to `shortcuts.prompt`:

  * There is now a class `Prompt` which also has a method `prompt`. Both the
    class and the method take about the same arguments. This can be used to
    create a session. Every `prompt` call of the same instance will reuse all
    the arguments given to the class itself. This can be used for instance to
    keep the history between multiple calls.

    Of course, it's still possible to call the global `prompt` function. This
    will create a new instance every time when it's called.

  * The `prompt` function now takes an `key_bindings` argument instead of
    `key_bindings_registry`. This should only contain the additional bindings.
    (The default bindings are always included.)

- Changes to the event loops:

  * The event loop API is now closer to how asyncio works. A prompt_toolkit
    `Application` now has a `Future` object. Calling the `.start()` method
    creates and returns that `Future`. An event loop has a `run_until_complete`
    method that takes a future and runs the event loop until the Future is set.

    The idea is to be able to transition easily to asyncio when Python 2
    support can be dropped in the future.

  * `Application` still has a method `run()` that underneath still runs the
    event loop until the `Future` is set and returns that result.
