@@ -54,13 +54,14 @@ The visualisation happens in several steps:
    2. First, the buffer's text is passed to the
       :meth:`~prompt_toolkit.lexers.Lexer.lex_document` method of a
       :class:`~prompt_toolkit.lexers.Lexer`. This returns a function which
-      for a given line number, returns a token list for that line (that's a
-      list of ``(Token, text)`` tuples).
+      for a given line number, returns a "formatted text list" for that line
+      (that's a list of ``(style_string, text)`` tuples).
 
-   3. The token list is passed through a list of
+   3. This list is passed through a list of
       :class:`~prompt_toolkit.layout.processors.Processor` objects.
       Each processor can do a transformation for each line.
-      (For instance, they can insert or replace some text.)
+      (For instance, they can insert or replace some text, highlight the
+      selection or search string, etc...)
 
    4. The :class:`~prompt_toolkit.layout.UIControl` returns a
       :class:`~prompt_toolkit.layout.UIContent` instance which
